# OPengine.Addon.Assimp

./: CMakeLists.txt  README.md  addon.cmake  package.json
include/: OPMconvert.h  OPassimp.h  Utils.h
source/: OPMconvert.cpp  OPassimp.cpp  Utils.cpp
